AssemblyDefinitionFileを各々に追加

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,28 @@ UserSettings/
 build
 unity/LocalCache
 .vs/
+/ProjectSettings/AudioManager.asset
+/ProjectSettings/ClusterInputManager.asset
+/ProjectSettings/DynamicsManager.asset
+/ProjectSettings/EditorBuildSettings.asset
+/ProjectSettings/EditorSettings.asset
+/.idea/.idea.UnityExtension_RequireComponent.dir/.idea/encodings.xml
+/ProjectSettings/GraphicsSettings.asset
+/.idea/.idea.UnityExtension_RequireComponent.dir/.idea/indexLayout.xml
+/ProjectSettings/InputManager.asset
+/Packages/manifest.json
+/ProjectSettings/MemorySettings.asset
+/ProjectSettings/NavMeshAreas.asset
+/ProjectSettings/PackageManagerSettings.asset
+/Packages/packages-lock.json
+/ProjectSettings/Physics2DSettings.asset
+/ProjectSettings/PresetManager.asset
+/ProjectSettings/ProjectSettings.asset
+/ProjectSettings/ProjectVersion.txt
+/ProjectSettings/QualitySettings.asset
+/ProjectSettings/TagManager.asset
+/ProjectSettings/TimeManager.asset
+/ProjectSettings/UnityConnectSettings.asset
+/ProjectSettings/VersionControlSettings.asset
+/.idea/.idea.UnityExtension_RequireComponent.dir/.idea/vcs.xml
+/ProjectSettings/VFXManager.asset
